fix content block

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,4 +10,7 @@
   transition: top 0.3s ease-in-out;
 }
 
-
+// .content {
+//   border-left: 1px rgb(255, 0, 0) solid;
+//   border-right: 1px rgb(255, 0, 0) solid;
+// }
