--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
                 </a>
             </div>
             <div
-                class="footer-link grid grid-cols-2 text-center text-white font-jost list-none items-center md:text-lg">
+                class="footer-link text-base grid grid-cols-2 text-center text-white font-jost list-none items-center">
                 <li><a routerLink="/" class="hover:text-light-green" routerLinkActive="text-light-green"
                         [routerLinkActiveOptions]="{ exact: true }">Головна</a></li>
                 <li><a routerLink="/license" class="hover:text-light-green"
