--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -6,7 +6,7 @@
       </h2>
       <p class="mx-3 mb-4 xl:mb-8 text-2xl font-thin font-nunito text-white">
         Універсальна ПЛР Лабораторія</p>
-      <div class="home-buttons space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+      <div class="home-buttons space-y-4 space-x-6 sm:flex-row sm:justify-center sm:space-y-0">
         <a routerLink="/guide"
           class="gradient-button-green inline-flex justify-center items-center py-2 px-5 text-center">
           Здати аналіз
@@ -18,9 +18,6 @@
       </div>
       <p class="price-info font-jost my-5 md:text-xl lg:text-base lg:my-2">Ціни вказані за станом на 01.11.24</p>
       <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.11.24 очікується підвищення цін</p> -->
-      <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що 31 грудня, а також 1 та 2 січня наша лабораторія не працюватиме. </p> -->
-      <!-- <p class="font-jost  md:text-xl lg:text-lg lg:my-1">З наступаючими святами! Бажаємо Вам здоров'я та благополуччя в новому році!</p>
-      <p class="font-jost md:text-xl lg:text-lg lg:my-1">З повагою, Green Lab</p> -->
       <div class="block shadow-lg bg-gray-900 bg-opacity-10 rounded-2xl text-center font-jost p-1 mx-7 sm:mx-24 md:mx-52 md:mt-8 leading-1 text-base font-normal lg:mx-72 xl:mx-80">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10:00-18:00 (НД-вихідний)</p>
@@ -35,8 +32,8 @@
   </section>
 
 
-  <div class="container">
-    <div class="font-nunito text-base relative py-6 -mt-16 mb-5 bg-white rounded-3xl shadow-[20px_0_25px_-5px_rgba(0,0,0,0.10),-20px_0_25px_-5px_rgba(0,0,0,0.10)] drop-shadow-md sm:mx-12 xl:-mt-10 xl:mx-36 xl:px-10">
+  <div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="relative p-6 -mt-16 mb-5 bg-white rounded-3xl shadow-[20px_0_25px_-5px_rgba(0,0,0,0.10),-20px_0_25px_-5px_rgba(0,0,0,0.10)] drop-shadow-md xl:-mt-10">
       <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Останні новини</h2>
       <div class="flex flex-col lg:flex-row items-center lg:items-start">
         <div class="max-w-xs w-full bg-white border border-gray-300 rounded-lg shadow-xs lg:mr-6">
@@ -60,23 +57,17 @@
   </div>
   
   
-  
-
-
-
 
   <!-- About us -->
-  <div class="container mx-auto px-4 sm:px-6 lg:px-12">
-    <div class="font-nunito text-base py-6 mb-5">
+  <div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="py-6 mb-5">
       <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Про нас</h2>
       <div class="flex flex-col md:flex-row items-center gap-6">
-        <!-- Изображение -->
         <div class="w-full md:w-1/2 flex justify-center">
           <img class="w-full max-w-md md:max-w-full h-auto object-cover" src="../../../assets/images/main/about_us.png" alt="About us">
         </div>
-        <!-- Текст -->
-        <div class="w-full md:w-1/2 xl:pr-20">
-          <p class="indent-6 px-4 xl:text-base">
+        <div class="w-full md:w-1/2">
+          <p class="indent-6 px-4">
             <b>Greenlab</b> &ndash; сучасна ПЛР-лабораторія для точної молекулярно-генетичної діагностики.  
             Своєчасна та точна діагностика – ключовий етап у виявленні та попередженні захворювань.  
             Кожен день перед фахівцями постає питання: «У чому причина захворювання?»  
@@ -127,7 +118,7 @@
   <hr>
 
   <!-- Contacts-->
-  <div class="contacts container py-10 font-nunito">
+  <div class="font-nunito text-base p-6 lg:px-0 max-w-screen-lg mx-auto">
     <h2 class="text-center text-3xl pt-1 pb-10 text-gray-800 font-semibold">
       <svg class=" fill-gray-800 mr-2 h-8 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path
@@ -174,8 +165,8 @@
   </div>
   <hr>
 
-  <section class="bg-white">
-    <div class="grid max-w-screen-xl px-6 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 items-center justify-center">
+  <section class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="grid py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 items-center justify-center">
       <div class="mr-auto place-self-center lg:col-span-7 font-nunito text-center">
         <h1 class="max-w-2xl mb-10 text-gray-800 text-3xl font-semibold tracking-tight leading-none text-center">
           <svg class="fill-gray-800 mr-1 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
@@ -183,10 +174,10 @@
           </svg>
           Дозвільні документи
         </h1>
-        <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 md:text-lg lg:text-xl text-center xl:text-base">
+        <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 text-center">
           Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.
         </p>
-        <a routerLink="/license" class="gradient-button-green inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 xl:text-sm xl:font-light">
+        <a routerLink="/license" class="gradient-button-green">
           Переглянути документи
         </a>
       </div>
