--- a/src/app/components/pages/not-found/not-found.component.html
+++ b/src/app/components/pages/not-found/not-found.component.html
@@ -4,7 +4,7 @@
             <h1 class="mb-4 text-7xl tracking-tight font-extrabold lg:text-9xl text-primary-600">404</h1>
             <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl">Ой, щось пішло не так.</p>
             <p class="mb-4 text-lg font-light text-gray-500">Вибачте, така сторінка не знайдена. На домашній сторінці ви знайдете усі посилання. </p>
-            <a routerLink="/" class="m-7 inline-flex text-white bg-tahiti hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Повернутись до головної</a>
+            <a routerLink="/" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-sky focus:outline-none focus:ring-blue-300 transition delay-50 duration-300">Повернутись до головної</a>
         </div>   
     </div>
 </section>
