--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -1,18 +1,18 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <svg class="fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
-              d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
-          </svg>
-          {{ title }}
+                d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z" />
+            </svg>
+            {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between sm:mb-10">
-        <div class="lg:mx-auto">
-            <img src="../../../../assets/images/guide.png" alt="guide-image" loading="eager">
+    <div class="flex flex-wrap justify-between my-10">
+        <div class="w-full">
+            <img src="../../../../assets/images/guide.png" class="min-w-full h-auto max-h-48 object-cover" alt="guide-image" loading="eager">
         </div>
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+        <div class="my-10">
             <p>Організація лабораторних досліджень, а саме здачі діагностичних тестів складається з декількох етапів:</p>
             <p class="mt-3"><b>1. Підготовка:</b></p>
             <p>&ndash; визначиться з типом досліджень</p>
@@ -21,7 +21,7 @@
             <p>&ndash; Підготуйте витратні матеріали для відбору, зберігання та транспортування (див. 
                 <a routerLink="/materials" class="text-blue">Витратний матеріал</a>)
             </p>
-            <div class="flex flex-wrap">
+            <div class="flex flex-wrap mx-auto justify-center">
                 <img src="../../../../assets/images/containers/edta.png" class="w-40" alt="edta">
                 <img src="../../../../assets/images/containers/eppendorf.png" class="w-40" alt="eppendorf">
                 <img src="../../../../assets/images/containers/aplicator.png" class="w-40" alt="aplicator">
@@ -36,7 +36,7 @@
                 відправляються в лабораторію) (див. <a routerLink="/marking" class="text-blue">Маркування проб</a>)</p>
             <p>&ndash; Заповніть направлення для дослідження</p>
             <div class="inline">
-                <a href="../../../../assets/files/blank.pdf" download class="gradient-button-green text-gray-900 mt-2 text-xs no-underline inline-block px-2 py-2.5 mb-5 rounded-lg font-montserrat uppercase tracking-normal min-w-fit"><img width="20" class="float-left mr-2"
+                <a href="../../../../assets/files/blank.pdf" download class="gradient-button-green "><img width="20" class="float-left mr-2"
                     src="https://img.icons8.com/fluency-systems-regular/48/download--v1.png" alt="Направлення на дослідження" />
                     Направлення на дослідження
                 </a>
