--- a/src/app/components/pages/news-item/news-item.component.html
+++ b/src/app/components/pages/news-item/news-item.component.html
@@ -1,11 +1,10 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <!-- {{ title }} -->
-            Цистоізоспороз
+            {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between sm:mb-10">   
+    <div class="flex flex-wrap justify-between sm:mb-10">
         <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p><b>Цистоізоспороз</b> – це паразитарне захворювання, що викликається найпростішими – одноклітинними організмами, що належать до роду Cystoisospora. Хвороба найчастіше вражає молодих собак і котів, спричиняючи діарею, зневоднення та загальне ослаблення організму.</p>
             <p class="font-semibold">Основні симптоми:</p>
@@ -18,36 +17,22 @@
             <p>У дорослих тварин захворювання часто проходить безсимптомно, але вони можуть бути носіями.</p>
             <p class="font-semibold">Для підтвердження діагнозу використовують:</p>
             <ul>
-                <li>🔬 Мікроскопічне дослідження калу – метод флотації (з використанням цукрового або сольового розчину) дозволяє виявити ооцисти Cystoisospora.</li>
-                <li>🧬 ПЛР (полімеразна ланцюгова реакція) – високочутливий метод для точної ідентифікації збудника.</li>
+                <li><span>🔬</span> Мікроскопічне дослідження калу – метод флотації (з використанням цукрового або сольового розчину) дозволяє виявити ооцисти Cystoisospora.</li>
+                <li><span>🧬</span> ПЛР (полімеразна ланцюгова реакція) – високочутливий метод для точної ідентифікації збудника.</li>
             </ul>
             <p class="font-semibold">Лікування та профілактика</p>
             <p>Лікування спрямоване на знищення паразитів та підтримку загального стану тварини:</p>
             <ul>
-                <li>💊 Антикокцидійні препарати (толтразурил, сульфаніламідні засоби)</li>
-                <li>💧 Регідратаційна терапія (пероральна або внутрішньовенна рідина)</li>
-                <li>🍗 Легка дієта (високоякісні корми, пробіотики)</li>
+                <li><span>💊</span> Антикокцидійні препарати (толтразурил, сульфаніламідні засоби)</li>
+                <li><span>💧</span> Регідратаційна терапія (пероральна або внутрішньовенна рідина)</li>
+                <li><span>🍗</span> Легка дієта (високоякісні корми, пробіотики)</li>
             </ul>
             <p class="font-semibold">Профілактичні заходи:</p>
             <ul>
-                <li>✔ Регулярне прибирання місць утримання тварин</li>
-                <li>✔ Використання дезінфікуючих засобів (аміачні сполуки ефективні проти ооцист)</li>
-                <li>✔ Уникнення контакту молодих імунно-незахищених тварин із потенційними носіями</li>
-                <li>✔ Контроль джерел води та їжі</li>
+                <li>✅ Регулярне прибирання місць утримання тварин</li>
+                <li>✅ Використання дезінфікуючих засобів (аміачні сполуки ефективні проти ооцист)</li>
+                <li>✅ Уникнення контакту молодих імунно-незахищених тварин із потенційними носіями</li>
+                <li>✅ Контроль джерел води та їжі</li>
             </ul>
     </div>
 </div>
-
-<!-- <div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
-      <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-        {{ post?.title }}
-      </h2>
-    </div>
-    <div class="flex flex-wrap justify-between sm:mb-10">
-      <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
-        <p><b>{{ post?.title }}</b> – {{ post?.content }}</p>
-        <p class="font-semibold">Теги: {{ post?.tag }}</p>
-      </div>
-    </div>
-  </div> -->
