--- a/src/app/components/pages/rules-pages-collection/marking/marking.component.html
+++ b/src/app/components/pages/rules-pages-collection/marking/marking.component.html
@@ -1,15 +1,15 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <svg class="fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
-              d="M0 64C0 46.3 14.3 32 32 32H96h64 64c17.7 0 32 14.3 32 32s-14.3 32-32 32V266.8c-20.2 28.6-32 63.5-32 101.2c0 25.2 5.3 49.1 14.8 70.8C189.5 463.7 160.6 480 128 480c-53 0-96-43-96-96V96C14.3 96 0 81.7 0 64zM96 96v96h64V96H96zM224 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L352 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z" />
-          </svg>
-          {{ title }}
+                d="M0 64C0 46.3 14.3 32 32 32H96h64 64c17.7 0 32 14.3 32 32s-14.3 32-32 32V266.8c-20.2 28.6-32 63.5-32 101.2c0 25.2 5.3 49.1 14.8 70.8C189.5 463.7 160.6 480 128 480c-53 0-96-43-96-96V96C14.3 96 0 81.7 0 64zM96 96v96h64V96H96zM224 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L352 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z" />
+            </svg>
+            {{ title }}
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+        <div class="my-10">
             <p>Важливий момент на етапі забору проб — це їх маркування перед відправкою в лабораторію. Дана процедура дозволяє уникнути помилок при ідентифікації біологічного матеріалу.</p>
             <p>Для того, щоб підписати пробу, можна використовувати незмивні маркери, що клеяться стікери, головною властивістю яких є неможливість видалення (зникнення) під час зберігання і транспортування матеріалу.</p>
             <p>Інформація, яка повинна бути на пробірці з матеріалом:</p>
