--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -1,16 +1,16 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+            <svg class="fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
             <path
-              d="M175 389.4c-9.8 16-15 34.3-15 53.1c-10 3.5-20.8 5.5-32 5.5c-53 0-96-43-96-96V64C14.3 64 0 49.7 0 32S14.3 0 32 0H96h64 64c17.7 0 32 14.3 32 32s-14.3 32-32 32V309.9l-49 79.6zM96 64v96h64V64H96zM352 0H480h32c17.7 0 32 14.3 32 32s-14.3 32-32 32V214.9L629.7 406.2c6.7 10.9 10.3 23.5 10.3 36.4c0 38.3-31.1 69.4-69.4 69.4H261.4c-38.3 0-69.4-31.1-69.4-69.4c0-12.8 3.6-25.4 10.3-36.4L320 214.9V64c-17.7 0-32-14.3-32-32s14.3-32 32-32h32zm32 64V224c0 5.9-1.6 11.7-4.7 16.8L330.5 320h171l-48.8-79.2c-3.1-5-4.7-10.8-4.7-16.8V64H384z" />
-          </svg>
-          {{ title }}
+                d="M175 389.4c-9.8 16-15 34.3-15 53.1c-10 3.5-20.8 5.5-32 5.5c-53 0-96-43-96-96V64C14.3 64 0 49.7 0 32S14.3 0 32 0H96h64 64c17.7 0 32 14.3 32 32s-14.3 32-32 32V309.9l-49 79.6zM96 64v96h64V64H96zM352 0H480h32c17.7 0 32 14.3 32 32s-14.3 32-32 32V214.9L629.7 406.2c6.7 10.9 10.3 23.5 10.3 36.4c0 38.3-31.1 69.4-69.4 69.4H261.4c-38.3 0-69.4-31.1-69.4-69.4c0-12.8 3.6-25.4 10.3-36.4L320 214.9V64c-17.7 0-32-14.3-32-32s14.3-32 32-32h32zm32 64V224c0 5.9-1.6 11.7-4.7 16.8L330.5 320h171l-48.8-79.2c-3.1-5-4.7-10.8-4.7-16.8V64H384z" />
+            </svg>
+            {{ title }}
         </h2>
     </div>
     
     <div class="flex flex-wrap justify-between">
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+        <div class="my-10">
             <p class="my-6">Вибір витратних матеріалів є важливим моментом при підготовці до відбору проб для дослідження. Використовуйте тільки одноразові, стерильні пробірки, контейнери, зонди, рекомендовані лабораторією, так як вони найбільш підходять для збору, зберігання і транспортування біологічного матеріалу.</p>
             <p class="my-6">Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини. Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
