--- a/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
+++ b/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
@@ -1,7 +1,7 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <svg class="fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path
                 d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z" />
             </svg>
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between sm:mb-10">
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+        <div class="my-10">
             <p>Як і багато методів діагностики, лабораторні дослідження призначені для оцінки здоров&rsquo;я вашої тварини. Існує ряд правил підготовки тварини до підбору аналізів, дотримуючись яких ви гарантовано отримаєте точні і достовірні результати.</p>
             <p class="my-8"><strong>Підготовка тварини до аналізу методом ПЛР-РВ</strong></p>
             <p>Перш ніж збирати матеріал, переконайтеся, що:</p>
