--- a/src/app/components/pages/rules-pages-collection/selection-pages-collection/discharge-sampling/discharge-sampling.component.html
+++ b/src/app/components/pages/rules-pages-collection/selection-pages-collection/discharge-sampling/discharge-sampling.component.html
@@ -1,15 +1,15 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <svg class="fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path
-              d="M441 7l32 32 32 32c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-15-15L417.9 128l55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-72-72L295 73c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l55 55L422.1 56 407 41c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0zM210.3 155.7l61.1-61.1c.3 .3 .6 .7 1 1l16 16 56 56 56 56 16 16c.3 .3 .6 .6 1 1l-191 191c-10.5 10.5-24.7 16.4-39.6 16.4H97.9L41 505c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l57-57V325.3c0-14.9 5.9-29.1 16.4-39.6l43.3-43.3 57 57c6.2 6.2 16.4 6.2 22.6 0s6.2-16.4 0-22.6l-57-57 41.4-41.4 57 57c6.2 6.2 16.4 6.2 22.6 0s6.2-16.4 0-22.6l-57-57z" />
-          </svg>
-          {{ title }}
+                d="M441 7l32 32 32 32c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-15-15L417.9 128l55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-72-72L295 73c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l55 55L422.1 56 407 41c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0zM210.3 155.7l61.1-61.1c.3 .3 .6 .7 1 1l16 16 56 56 56 56 16 16c.3 .3 .6 .6 1 1l-191 191c-10.5 10.5-24.7 16.4-39.6 16.4H97.9L41 505c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l57-57V325.3c0-14.9 5.9-29.1 16.4-39.6l43.3-43.3 57 57c6.2 6.2 16.4 6.2 22.6 0s6.2-16.4 0-22.6l-57-57 41.4-41.4 57 57c6.2 6.2 16.4 6.2 22.6 0s6.2-16.4 0-22.6l-57-57z" />
+            </svg>
+            {{ title }}
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+        <div class="my-10">
             <p class="my-3">Витратний матеріал: стерильний одноразовий шприц, пробірка з ЕДТА</p>
             <p>Порядок забору:</p>
             <ol class="list-counter-circle">
