--- a/src/app/components/pages/rules-pages-collection/selection-pages-collection/rectal-sampling/rectal-sampling.component.html
+++ b/src/app/components/pages/rules-pages-collection/selection-pages-collection/rectal-sampling/rectal-sampling.component.html
@@ -1,15 +1,15 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-80">
-    <div class="flex flex-wrap justify-center xl:mb-10">
+<div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+    <div class="flex flex-wrap justify-center">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+            <svg class="fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
             <path
-              d="M0 32C0 14.3 14.3 0 32 0H352c17.7 0 32 14.3 32 32V64c0 17.7-14.3 32-32 32H32C14.3 96 0 81.7 0 64V32zm32 96H352V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V416H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V320H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V224H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V128z" />
-          </svg>
-          {{ title }}
+                d="M0 32C0 14.3 14.3 0 32 0H352c17.7 0 32 14.3 32 32V64c0 17.7-14.3 32-32 32H32C14.3 96 0 81.7 0 64V32zm32 96H352V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V416H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V320H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V224H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V128z" />
+            </svg>
+            {{ title }}
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+        <div class="my-10">
             <p class="my-3">Витратний матеріал: урогенітальний зонд, Еппендорф з транспортним середовищем</p>
             <p>Порядок забору:</p>
             <ol class="list-counter-circle">
