--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
                 (mouseenter)="openDropdown('rules')"
                 (mouseleave)="closeDropdown('rules')"
                 (click)="toggleDropdown('rules'); $event.stopPropagation()">
-                    <a href="javascript:void(0);"  class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900 flex items-center group-hover:text-blue-600">
+                    <a href="#"  class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900 flex items-center group-hover:text-blue-600">
                         Правила збору проб
                         <svg class="ml-1 w-5 h-3 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
@@ -31,7 +31,7 @@
                         (mouseenter)="openDropdown('rulesSub')"
                         (mouseleave)="closeDropdown('rulesSub')"
                         (click)="toggleDropdown('rulesSub'); $event.stopPropagation()">
-                        <a href="javascript:void(0);"  class="block px-4 py-3 mb-2 text-base hover:bg-gray-100 items-center group-hover:text-blue-600">
+                        <a href="#"  class="block px-4 py-3 mb-2 text-base hover:bg-gray-100 items-center group-hover:text-blue-600">
                             Відбір
                             <svg class="w-5 h-3 text-gray-800 inline-block ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
@@ -55,7 +55,7 @@
                 (mouseenter)="openDropdown('services')"
                 (mouseleave)="closeDropdown('services')"
                 (click)="toggleDropdown('services'); $event.stopPropagation()">
-               <a href="javascript:void(0);"  class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900 flex items-center group-hover:text-blue-600">
+               <a href="#"  class="nav-link text-base font-montserrat_alternates font-semibold leading-6 text-gray-900 flex items-center group-hover:text-blue-600">
                    Послуги
                    <svg class="ml-1 w-5 h-3 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
@@ -69,7 +69,7 @@
                        (mouseenter)="openDropdown('diagnostics')"
                        (mouseleave)="closeDropdown('diagnostics')"
                        (click)="toggleDropdown('diagnostics'); $event.stopPropagation()">
-                       <a href="javascript:void(0);"  class="block px-4 py-2 text-base hover:bg-gray-100">
+                       <a href="#"  class="block px-4 py-2 text-base hover:bg-gray-100">
                            Діагностика ПЛР
                            <svg class="w-5 h-3 text-gray-800 inline-block ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
@@ -86,7 +86,7 @@
                        (mouseenter)="openDropdown('diagnosticPanels')"
                        (mouseleave)="closeDropdown('diagnosticPanels')"
                        (click)="toggleDropdown('diagnosticPanels'); $event.stopPropagation()">
-                       <a href="javascript:void(0);"  class="block px-4 py-2 text-base hover:bg-gray-100">
+                       <a href="#"  class="block px-4 py-2 text-base hover:bg-gray-100">
                            Діагностичні панелі ПЛР
                            <svg class="w-5 h-3 text-gray-800 inline-block ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
@@ -105,7 +105,7 @@
                         (mouseenter)="openDropdown('inflammationMarkers')"
                         (mouseleave)="closeDropdown('inflammationMarkers')"
                         (click)="toggleDropdown('inflammationMarkers'); $event.stopPropagation()">
-                        <a href="javascript:void(0);"  class="block px-4 py-2 mb-1 text-base hover:bg-gray-100">
+                        <a href="#"  class="block px-4 py-2 mb-1 text-base hover:bg-gray-100">
                             Маркери запалення <span class="text-red">(новинка)</span>
                             <svg class="w-5 h-3 text-gray-800 inline-block ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
