--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="home-page">
+<div>
   <section class="main-image bg-center bg-no-repeat bg-main-image bg-blend-multiply sm:bg-cover">
     <div class="mx-auto max-w-screen-xl text-center pt-14 pb-0">
-      <h2 class="mb-4 mt-4 text-6xl font-nunito font-normal tracking-tight leading-none text-white md:text-7xl md:mt-8 lg:text-8xl">
+      <h2 class="brand mb-4 mt-4 text-6xl font-nunito font-normal tracking-tight leading-none text-white md:text-7xl md:mt-8 lg:text-8xl ">
         <span class="text-custom_green">Green</span>Lab
       </h2>
       <p class="mx-3 mb-4 xl:mb-8 text-2xl font-thin font-nunito text-white">
@@ -20,8 +20,9 @@
       <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.11.24 очікується підвищення цін</p> -->
       <div class="block shadow-lg bg-gray-900 bg-opacity-10 rounded-2xl text-center font-jost p-1 mx-7 sm:mx-24 md:mx-52 md:mt-8 leading-1 text-base font-normal lg:mx-72 xl:mx-80">
         <p>Графік роботи:</p>
-        <p>ПН-СБ 10:00-18:00 (НД-вихідний)</p>
-        <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
+        <p>ПН-СБ 10:00 - 18:00</p>
+        <p>Видача результатів проводится з 17:00 по 18:00 у робочі дні</p>
+        <p>(Неділя - вихідний)</p>
       </div>
       <div class="arrow-down">
         <span></span>
@@ -32,7 +33,7 @@
   </section>
 
 
-  <div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+  <div class="box font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto" [class.visible]="isVisible">
     <div class="relative p-6 -mt-16 mb-5 bg-white rounded-3xl shadow-[20px_0_25px_-5px_rgba(0,0,0,0.10),-20px_0_25px_-5px_rgba(0,0,0,0.10)] drop-shadow-md xl:-mt-10">
       <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Останні новини</h2>
       <div class="flex flex-col lg:flex-row items-center lg:items-start">
@@ -126,9 +127,11 @@
       </svg>
       Контакти
     </h2>
-      <div class="content">
-        <div class="flex flex-col md:flex-row flex-wrap place-content-center text-center space-y-8 md:space-y-0 md:space-x-8 xl:space-x-56">
-          <div class="address-contacts">
+
+      <div class="">
+        <div class="flex flex-col md:flex-row place-content-between text-center">
+          
+          <div>
             <svg class="w-6 inline py-1 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path d="M172.3 501.7C27 291 0 269.4 0 192 0 86 86 0 192 0s192 86 192 192c0 77.4-27 99-172.3 309.7-9.5 13.8-29.9 13.8-39.5 0zM192 272c44.2 0 80-35.8 80-80s-35.8-80-80-80-80 35.8-80 80 35.8 80 80 80z" />
             </svg>
@@ -136,22 +139,23 @@
             <div>м.Чорноморськ</div>
             <div>вул.Олександрійська, 2</div>
           </div>
-          <div class="phone-contacts">
+
+          <div>
             <svg class="w-6 inline py-1 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path d="M497.4 361.8l-112-48a24 24 0 0 0 -28 6.9l-49.6 60.6A370.7 370.7 0 0 1 130.6 204.1l60.6-49.6a23.9 23.9 0 0 0 6.9-28l-48-112A24.2 24.2 0 0 0 122.6 .6l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.3 24.3 0 0 0 -14-27.6z" />
             </svg>
             <div class="topic font-bold mb-3">Телефон</div>
-            <div>+38-096-298-60-84</div>
-            <div>+38-096-628-27-00</div>
+            <p><a href="tel:+380966282700">+38-096-628-27-00 </a> (Адмін.питання)</p>
+            <p><a href="tel:+380962986084">+38-096-298-60-84</a> (Логістика та сплата)</p>
             <br />
-            <div class="topbar-socials flex flex-wrap justify-center space-x-8">
-              <a href="viber://chat?number=%2B380962986084" target="_blank"><img
-                  src="../../../assets/images/topbar/viber.ico" alt="viber"></a>
-              <a href="https://t.me/+380935582302" target="_blank"><img
-                  src="../../../assets/images/topbar/telegram.ico" alt="telegram"></a>
+            <div class="flex justify-center space-x-8 py-2">
+              <a href="viber://chat?number=%2B380962986084" target="_blank">
+                <img src="../../../assets/images/topbar/viber.ico" alt="viber"></a>
+              <a href="https://t.me/+380935582302" target="_blank">
+                <img src="../../../assets/images/topbar/telegram.ico" alt="telegram"></a>
             </div>
           </div>
-          <div class="email-contacts py-2">
+          <div class="py-2">
             <svg class="w-6 inline fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
             </svg>
