--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -144,3 +144,30 @@
     }
  }
  
+ .box {
+    opacity: 0;
+    transform: translateY(-50px); /* Начальная позиция выше */
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  }
+  
+  .box.visible {
+    opacity: 1;
+    transform: translateY(0); /* Возвращаем в нормальную позицию */
+  }
+
+
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .brand {
+    opacity: 0; /* Начальное состояние (скрыто) */
+    animation: fadeInUp 0.7s ease-out forwards;
+  }
