--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -16,12 +16,12 @@
           Прайс-лист
         </a>
       </div>
-      <p class="price-info font-jost my-5 md:text-xl lg:text-base lg:my-2">Ціни вказані за станом на 01.11.24</p>
+      <p class="price-info font-jost my-5 md:text-xl lg:text-base lg:my-2">Ціни вказані за станом на 01.03.25</p>
       <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.11.24 очікується підвищення цін</p> -->
       <div class="block shadow-lg bg-gray-900 bg-opacity-10 rounded-2xl text-center font-jost p-1 mx-7 sm:mx-24 md:mx-52 md:mt-8 leading-1 text-base font-normal lg:mx-72 xl:mx-80">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10:00 - 18:00</p>
-        <p>Видача результатів проводится з 17:00 по 18:00 у робочі дні</p>
+        <p>Видача результатів проводиться з 17:00 по 18:00 у робочі дні</p>
         <p>(Неділя - вихідний)</p>
       </div>
       <div class="arrow-down">
@@ -145,8 +145,8 @@
               <path d="M497.4 361.8l-112-48a24 24 0 0 0 -28 6.9l-49.6 60.6A370.7 370.7 0 0 1 130.6 204.1l60.6-49.6a23.9 23.9 0 0 0 6.9-28l-48-112A24.2 24.2 0 0 0 122.6 .6l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.3 24.3 0 0 0 -14-27.6z" />
             </svg>
             <div class="topic font-bold mb-3">Телефон</div>
-            <p><a href="tel:+380966282700">+38-096-628-27-00 </a> (Адмін.питання)</p>
             <p><a href="tel:+380962986084">+38-096-298-60-84</a> (Логістика та сплата)</p>
+            <p><a href="tel:+380966282700">+38-096-628-27-00 </a> (Адмін.питання)</p>
             <br />
             <div class="flex justify-center space-x-8 py-2">
               <a href="viber://chat?number=%2B380962986084" target="_blank">
