--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -25,8 +25,8 @@
         <p>(Неділя - вихідний)</p>
       </div>
 
-      <div class="box font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto" [class.visible]="isVisible">
-        <div class="relative px-6 pt-2 pb-6 bg-white rounded-3xl mt-6">
+      <div class="news font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto pb-2">
+        <div class="relative px-6 pt-2 pb-6 bg-white rounded-3xl mt-6 lg:pb-2">
           <h2 class="text-center text-2xl text-gray-800 font-semibold">Останні новини</h2>
           <div class="flex flex-col lg:flex-row items-center lg:items-start">
             <div class="max-w-xs w-full bg-white border border-gray-300 rounded-lg shadow-xs lg:mr-6">
@@ -81,7 +81,7 @@
   
 
   <!-- About us -->
-  <div class="font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto">
+  <div class="box font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto" [class.visible]="isVisible">
     <div class="py-6 mb-5">
       <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Про нас</h2>
       <div class="flex flex-col md:flex-row items-center gap-6">
