--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -146,7 +146,7 @@
  
  .box {
     opacity: 0;
-    transform: translateY(-50px); /* Начальная позиция выше */
+    transform: translateY(-30px); /* Начальная позиция выше */
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
   }
   
@@ -170,4 +170,21 @@
   .brand {
     opacity: 0; /* Начальное состояние (скрыто) */
     animation: fadeInUp 0.7s ease-out forwards;
+  }
+
+
+  @keyframes fadeInDown {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .news {
+    opacity: 0; /* Начальное состояние (скрыто) */
+    animation: fadeInDown 0.7s ease-out forwards;
   }
