--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -11,7 +11,7 @@
           class="gradient-button-green inline-flex justify-center items-center py-2 px-5 text-center">
           Здати аналіз
         </a>
-        <a href="../../../../assets/files/price2024greenlab.pdf" target="_blank"
+        <a href="../../../../assets/files/price2025greenlab.pdf" target="_blank"
           class="gradient-button-blue inline-flex justify-center items-center py-2 px-5 text-center">
           Прайс-лист
         </a>
@@ -20,7 +20,8 @@
       <!-- <p class="price-info text-dark-red px-10 font-jost my-5 md:text-xl lg:text-lg lg:my-2">Звертаємо Вашу увагу, що з 01.11.24 очікується підвищення цін</p> -->
       <div class="block shadow-lg bg-gray-900 bg-opacity-10 rounded-2xl text-center font-jost p-1 mx-7 sm:mx-24 md:mx-52 md:mt-1 leading-1 text-base font-normal lg:mx-72 xl:mx-80">
         <p>Графік роботи:</p>
-        <p>ПН-СБ 10:00 - 18:00</p>
+        <p>ПН-ПТ 10:00 - 18:00 (СБ до 15:00)</p>
+        <!-- <p>Субота 10:00 - 15:00</p> -->
         <p>Видача результатів проводиться з 17:00 по 18:00 у робочі дні</p>
         <p>(Неділя - вихідний)</p>
       </div>
