--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -24,6 +24,7 @@
         <!-- <p>Субота 10:00 - 15:00</p> -->
         <p>Видача результатів проводиться з 17:00 по 18:00 у робочі дні</p>
         <p>(Неділя - вихідний)</p>
+        <p class="text-dark-red font-jost md:text-xl lg:text-base">Звертаємо Вашу увагу, що 21.04 лабораторія не працюватиме</p>
       </div>
 
       <div class="news font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto pb-2">
