--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,7 +26,7 @@
         </div>
         <hr class="mt-4 lg:my-0" />
         <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
-            <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2025 GreenLab. Всі права захищені.
+            <span class="text-xs text-white dark:text-gray-400 md:text-xs">© 2023-2025 GreenLab. Всі права захищені.
             </span>
         </div>
     </div>
