--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -24,26 +24,27 @@
         <!-- <p>Субота 10:00 - 15:00</p> -->
         <p>Видача результатів проводиться з 17:00 по 18:00 у робочі дні</p>
         <p>(Неділя - вихідний)</p>
-        <p class="text-dark-red font-jost md:text-xl lg:text-base">Звертаємо Вашу увагу, що 21.04 лабораторія не працюватиме</p>
+        <!-- <p class="text-dark-red font-jost md:text-xl lg:text-base">Звертаємо Вашу увагу, що 21.04 лабораторія не працюватиме</p> -->
       </div>
 
       <div class="news font-nunito text-base px-6 lg:px-0 max-w-screen-lg mx-auto pb-2">
         <div class="relative px-6 pt-2 pb-6 bg-white rounded-3xl mt-6 lg:pb-2">
           <h2 class="text-center text-2xl text-gray-800 font-semibold">Останні новини</h2>
-          <div class="flex flex-col lg:flex-row items-center lg:items-start">
-            <div class="max-w-xs w-full bg-white border border-gray-300 rounded-lg shadow-xs lg:mr-6">
+            <div class="flex flex-col lg:flex-row items-center lg:items-start">
+            <div class="relative max-w-xs w-full bg-white border border-gray-300 rounded-lg shadow-xs lg:mr-6">
               <img class="rounded-t-lg w-full h-[60px] object-cover" src="../../../../assets/images/news/3816152.jpg" alt="Цистоізоспороз" />
+              <!-- <span class="absolute top-0 right-0 bg-gray-800 bg-opacity-15 text-gray-900 text-xs font-medium px-2.5 py-0.5 rounded-full">22.03.2024</span> -->
               <div class="px-5 pb-3">
-                <a routerLink="/news-page-1">
-                  <h5 class="mt-1 text-xl font-semibold tracking-tight text-gray-900">Цистоізоспороз</h5>
-                </a>
-                <p><span class="bg-light-green2 text-custom_green text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Вже в наявності</span></p>
-                <p class="mb-3 text-gray-700 text-sm">Цистоізоспороз – це паразитарне захворювання, що викликається найпростішими – одноклітинними організмами, що належать до роду Cystoisospora.</p>
-                <a routerLink="/news-page-1" class="inline-flex items-center px-3 py-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-sky focus:outline-none focus:ring-blue-300 transition delay-50 duration-300">
-                  Читати більше
-                  <svg class="rtl:rotate-180 w-2.5 h-2.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                  </svg>
+              <a routerLink="/news-page-1">
+                <h5 class="mt-1 text-xl font-semibold tracking-tight text-gray-900">Цистоізоспороз</h5>
+              </a>
+              <p><span class="bg-light-green2 text-custom_green text-xs font-medium me-2 px-2.5 py-0.5 rounded-full">Вже в наявності</span></p>
+              <p class="mb-3 text-gray-700 text-sm">Цистоізоспороз – це паразитарне захворювання, що викликається найпростішими – одноклітинними організмами, що належать до роду Cystoisospora.</p>
+              <a routerLink="/news-page-1" class="inline-flex items-center px-3 py-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-sky focus:outline-none focus:ring-blue-300 transition delay-50 duration-300">
+                Читати більше
+                <svg class="rtl:rotate-180 w-2.5 h-2.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                </svg>
                 </a>
               </div>
             </div>
