--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,1 +1,2 @@
-<div id="map" loading="lazy" allowfullscreen=""></div>
+<!-- <div id="map" loading="lazy" allowfullscreen=""></div> -->
+<div #mapContainer class="map-container"></div>
