--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -91,7 +91,7 @@
         <!-- <div class="mx-auto lg:w-1/3">
             <img src="../../../assets/images/contacts.png" alt="contact-image" loading="eager">
         </div> -->
-        <app-map class="mx-0 min-h-72 w-full lg:w-1/2"></app-map>
+        <app-map class="mx-0 min-h-72 w-full lg:w-1/2 shadow-xl shadow-indigo-500/50"></app-map>
 
 
     </div>
