--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -21,11 +21,11 @@
                 <div class="flex flex-wrap mb-2">
                     <div class="mx-4">
                         <p class="text-sm text-gray-850">Логістика та сплата</p>
-                        <a href="tel:+380962986084">+38-096-298-60-84</a>
+                        <a href="tel:+380962986084">+38 (096) 298-60-84</a>
                     </div>
                     <div class="mx-4">
                         <p class="text-sm text-gray-850">Адміністративні питання</p>
-                        <a href="tel:+380966282700">+38-096-628-27-00</a>
+                        <a href="tel:+380966282700">+38 (096) 628-27-00</a>
                     </div>
                 </div>
             </div>
